--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
 				</section>
 			</nav>
 		</header>
+		<main>
+			<section>
+				<h1>Explore Mood Solutions!</h1>
+				<p>
+					We don't just track your <span>CURRENT MOOD</span>. <br> We help you explore <span> SOLUTIONS</span>.
+				</p>
+				<button>
+					Track Mood
+				</button>
+			</section>	
+			<section>
+					<img src="./assets/smileys.jpg" alt="smileys">
+			</section>
+		</main>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
