updated css and html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<h1>Helpifyy</h1>
 				</section>
 				<section>
-					<button>Track Mood</button>
+					<button>Click Me!</button>
 				</section>
 			</nav>
 		</header>
@@ -44,8 +44,20 @@
 			<p>
 				Moods and emotions are complex. It's thought three factors combine to create them in the brain: biology (for example, hormones and brain chemicals), psychology (such as personality and learned responses), and environment (like illness and emotional stress). 
 			</p>
-
 		</article>
+		<section class="tracker">
+			<h1>How are you <span>FEELING</span>?</h1>
+			<section class="first">
+				<button>Happy</button>
+				<button>Excited</button>
+				<button>Tender</button>
+			</section>
+			<section class="second">
+				<button>Sad</button>
+				<button>Angry</button>
+				<button>Scared</button>
+			</section>
+		</section>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
